--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,13 @@
 remote_theme: abhinavs/moonwalk
+
+@mixin dark-appearance {
+  html, body  {
+      --bg: #1f242A;
+      --bg-secondary: #323945;
+      --headings: #3D9970;
+      --text: #adb5bd;
+      --links: #91a7ff;
+      --highlight: #ffd8a8;
+      --highlight: #ffd43b;
+  };
+}
